Screenshots formatted.  Fonts and titles next.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="title">Websites by Rebecca - Portfolio</h1>
+      <h1 class="page-title">Websites by Rebecca - Portfolio</h1>
       <!-- React project 1 -->
       <h2 class="react-1 title">Jammming</h2>
       <div class="react-1 screenshot">
@@ -28,7 +28,7 @@
       <!-- Website 2 -->
       <h2 class="website-2 title">Saucha</h2>
       <div class="website-2 screenshot">
-        <img src="screenshots/saucha.png" alt="">
+        <img src="screenshots/saucha.jpg" alt="">
       </div>
       <!-- Website 3 -->
       <h2 class="website-3 title">Clearview</h2>
