Fonts and column headers done.  Links and descriptions next.

--- a/index.html
+++ b/index.html
@@ -4,34 +4,39 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Websites by Rebecca</title>
+    <link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
       <h1 class="page-title">Websites by Rebecca - Portfolio</h1>
+      <!-- React projects -->
+      <h2 class="react col-head">React projects</h2>
       <!-- React project 1 -->
-      <h2 class="react-1 title">Jammming</h2>
+      <h3 class="react-1 title">Jammming</h2>
       <div class="react-1 screenshot">
         <img src="screenshots/jammming.png" alt="">
       </div>
       <!-- React project 2 -->
-      <h2 class="react-2 title">ravenous</h2>
+      <h3 class="react-2 title">ravenous</h2>
       <div class="react-2 screenshot">
         <img src="screenshots/ravenous.png" alt="">
       </div>
+      <!-- Websites -->
+      <h2 class="site col-head">Websites</h2>
       <!-- Website 1 -->
-      <h2 class="website-1 title">Zenovation</h2>
+      <h3 class="website-1 title">Zenovation</h2>
       <div class="website-1 screenshot">
         <img src="screenshots/zenovation.png" alt="">
       </div>
       <!-- Website 2 -->
-      <h2 class="website-2 title">Saucha</h2>
+      <h3 class="website-2 title">Saucha</h2>
       <div class="website-2 screenshot">
         <img src="screenshots/saucha.jpg" alt="">
       </div>
       <!-- Website 3 -->
-      <h2 class="website-3 title">Clearview</h2>
+      <h3 class="website-3 title">Clearview</h2>
       <div class="website-3 screenshot">
         <img src="screenshots/clearview.png" alt="">
       </div>
