Hover descriptions drafted.

--- a/index.html
+++ b/index.html
@@ -17,11 +17,18 @@
       <h3 class="react-1 title">Jammming</h2>
       <div class="react-1 screenshot">
         <img src="screenshots/jammming.png" alt="">
+        <span class="description">
+          Jammming [sic] searches the Spotify database for tracks related to the user-entered search term.  Users can add tracks to create custom playlists, and save them to their Spotify account.  I created this app as Codecademy project. <a href="https://rhoffen.github.io/jammming" target="_blank">Click here</a> to see it in action.
+        </span>
       </div>
       <!-- React project 2 -->
       <h3 class="react-2 title">ravenous</h2>
       <div class="react-2 screenshot">
         <img src="screenshots/ravenous.png" alt="">
+        <span class="description">
+          ravenous [sic] queries Yelp to return a list of restaurants matching the search parameters of cuisine type and location. I created this app as Codecademy project. <a href="https://rhoffen.github.io/ravenous" target="_blank">Click here</a> to see it in action.
+        </span>
+
       </div>
       <!-- Websites -->
       <h2 class="site col-head">Websites</h2>
@@ -29,16 +36,26 @@
       <h3 class="website-1 title">Zenovation</h2>
       <div class="website-1 screenshot">
         <img src="screenshots/zenovation.png" alt="">
+        <span class="description">
+          I designed and deployed this website for Zenovation, a general contractor business. This fully responsive website features a photo gallery and a contact form. <a href="https://www.zenovationpdx.com" target="_blank">Click here</a> to visit.
+        </span>
+
       </div>
       <!-- Website 2 -->
       <h3 class="website-2 title">Saucha</h2>
       <div class="website-2 screenshot">
         <img src="screenshots/saucha.jpg" alt="">
+        <span class="description">
+          I designed and developed this website for Saucha, an aesthetics and massage provider. The site is fully responsive and uses the Google Maps javascript API to provide an interactive map. <a href="http://www.judithfoti.com" target="_blank">Click here</a> to visit.
+        </span>
       </div>
       <!-- Website 3 -->
       <h3 class="website-3 title">Clearview</h2>
       <div class="website-3 screenshot">
         <img src="screenshots/clearview.png" alt="">
+        <span class="description">
+          I developed this website for Clearview Perennials, a wholesale perennial nursery. The client requested a very simple, one-page website that provided basic information. <a href="http://www.clearviewperennials.net" target="_blank">Click here</a> to visit.
+        </span>
       </div>
       <!-- Footer -->
       <footer>
