--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
       <!-- Websites -->
       <h2 class="site col-head">Websites</h2>
       <!-- Website 1 -->
-      <h3 class="website-1 title">Zenovation</h2>
+      <h3 class="website-1 site title">Zenovation</h2>
       <div class="website-1 screenshot">
         <img src="screenshots/zenovation.png" alt="">
-        <span class="description">
+        <span class="site description">
           I designed and deployed this website for Zenovation, a general contractor business. This fully responsive website features a photo gallery and a contact form. <a href="https://www.zenovationpdx.com" target="_blank">Click here</a> to visit.
         </span>
 
       </div>
       <!-- Website 2 -->
-      <h3 class="website-2 title">Saucha</h2>
+      <h3 class="website-2 site title">Saucha</h2>
       <div class="website-2 screenshot">
         <img src="screenshots/saucha.jpg" alt="">
-        <span class="description">
+        <span class="site description">
           I designed and developed this website for Saucha, an aesthetics and massage provider. The site is fully responsive and uses the Google Maps javascript API to provide an interactive map. <a href="http://www.judithfoti.com" target="_blank">Click here</a> to visit.
         </span>
       </div>
       <!-- Website 3 -->
-      <h3 class="website-3 title">Clearview</h2>
+      <h3 class="website-3 site title">Clearview</h2>
       <div class="website-3 screenshot">
         <img src="screenshots/clearview.png" alt="">
-        <span class="description">
+        <span class="site description">
           I developed this website for Clearview Perennials, a wholesale perennial nursery. The client requested a very simple, one-page website that provided basic information. <a href="http://www.clearviewperennials.net" target="_blank">Click here</a> to visit.
         </span>
       </div>
