--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="page-title">Websites by Rebecca - Portfolio</h1>
+      <h1 class="page-title widest">Websites by Rebecca - Portfolio</h1>
+      <h1 class="page-title medium">Website by Rebecca<br>Portfolio</h1>
       <!-- React projects -->
       <h2 class="react col-head">React projects</h2>
       <!-- React project 1 -->
