--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container">
       <h1 class="page-title widest">Websites by Rebecca - Portfolio</h1>
-      <h1 class="page-title medium">Website by Rebecca<br>Portfolio</h1>
+      <h1 class="page-title medium">Websites by Rebecca<br>Portfolio</h1>
       <!-- React projects -->
       <h2 class="react col-head">React projects</h2>
       <!-- React project 1 -->
