Large screen rearrangement complete.  Check responsive.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="page-title widest">Websites by Rebecca - Portfolio</h1>
       <h1 class="page-title medium">Websites by Rebecca<br>Portfolio</h1>
       <!-- React projects -->
-      <h2 class="react col-head">React projects</h2>
+      <h2 class="react col-head">React<br>projects</h2>
       <!-- React project 1 -->
       <h3 class="react-1 title">Jammming</h2>
       <div class="react-1 screenshot">
