Horizontal grid layout for large screens completed.  Work on tablet now.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <!-- React projects -->
       <h2 class="react col-head">React<br>projects</h2>
       <!-- React project 1 -->
-      <h3 class="react-1 title">Jammming</h2>
+      <!-- <h3 class="react-1 title">Jammming</h2> -->
       <div class="react-1 screenshot">
         <img src="screenshots/jammming.png" alt="">
         <span class="description">
@@ -23,7 +23,7 @@
         </span>
       </div>
       <!-- React project 2 -->
-      <h3 class="react-2 title">ravenous</h2>
+      <!-- <h3 class="react-2 title">ravenous</h2> -->
       <div class="react-2 screenshot">
         <img src="screenshots/ravenous.png" alt="">
         <span class="description">
@@ -34,16 +34,15 @@
       <!-- Websites -->
       <h2 class="site col-head">Websites</h2>
       <!-- Website 1 -->
-      <h3 class="website-1 site title">Zenovation</h2>
+      <!-- <h3 class="website-1 site title">Zenovation</h2> -->
       <div class="website-1 screenshot">
-        <img src="screenshots/zenovation.png" alt="">
+        <img src="screenshots/zenovation.jpg" alt="">
         <span class="site description">
           I designed and deployed this website for Zenovation, a general contractor business. This fully responsive website features a photo gallery and a contact form. <a href="https://www.zenovationpdx.com" target="_blank">Click here</a> to visit.
         </span>
-
       </div>
       <!-- Website 2 -->
-      <h3 class="website-2 site title">Saucha</h2>
+      <!-- <h3 class="website-2 site title">Saucha</h2> -->
       <div class="website-2 screenshot">
         <img src="screenshots/saucha.jpg" alt="">
         <span class="site description">
@@ -51,7 +50,7 @@
         </span>
       </div>
       <!-- Website 3 -->
-      <h3 class="website-3 site title">Clearview</h2>
+      <!-- <h3 class="website-3 site title">Clearview</h2> -->
       <div class="website-3 screenshot">
         <img src="screenshots/clearview.png" alt="">
         <span class="site description">
