Responsive mostly complete.  Tweak for tablet.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       <h1 class="page-title widest">Websites by Rebecca - Portfolio</h1>
       <h1 class="page-title medium">Websites by Rebecca<br>Portfolio</h1>
       <!-- React projects -->
-      <h2 class="react col-head">React<br>projects</h2>
+      <h2 class="react col-head widest">React<br>Apps</h2>
+      <h2 class="react col-head medium">React Apps</h2>
       <!-- React project 1 -->
       <!-- <h3 class="react-1 title">Jammming</h2> -->
       <div class="react-1 screenshot">
@@ -36,7 +37,7 @@
       <!-- Website 1 -->
       <!-- <h3 class="website-1 site title">Zenovation</h2> -->
       <div class="website-1 screenshot">
-        <img src="screenshots/zenovation.jpg" alt="">
+        <img src="screenshots/zenovation.jpg" id="zen" alt="">
         <span class="site description">
           I designed and deployed this website for Zenovation, a general contractor business. This fully responsive website features a photo gallery and a contact form. <a href="https://www.zenovationpdx.com" target="_blank">Click here</a> to visit.
         </span>
