Working on ipad pro portrait.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,17 @@
     <div class="container">
       <h1 class="page-title widest">Websites by Rebecca - Portfolio</h1>
       <h1 class="page-title medium">Websites by Rebecca<br>Portfolio</h1>
+      <!-- Full-stack projects -->
+      <!-- Full-stack project 1 -->
+      <h2 class="full col-head widest">Full-stack<br>Apps</h2>
+      <h2 class="full col-head med-wide">Full stack</h2>
+      <h2 class="full col-head medium">Full-stack Apps</h2>
+      <div class="full-1 screenshot">
+        <img src="screenshots/vidbits-pr.png" alt="">
+        <span class="description">
+          I developed this full-stack video collection app with handlebars.js, Express.js and MongoDB. During development I implemented an automated test suite using Mocha, Chai, Supertest, WebdriverIO and Phantomjs. See the app <a href="https://vidbits.herokuapp.com" target="_blank">here</a>.
+        </span>
+      </div>
       <!-- React projects -->
       <h2 class="react col-head widest">React<br>Apps</h2>
       <h2 class="react col-head medium">React Apps</h2>
