AlbumWorks added to portfolio

--- a/index.html
+++ b/index.html
@@ -3,21 +3,27 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Websites by Rebecca</title>
+    <title>Rebecca Hoffenberg</title>
     <link href="https://fonts.googleapis.com/css?family=Days+One" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container">
-      <h1 class="page-title widest">Websites by Rebecca - Portfolio</h1>
-      <h1 class="page-title medium">Websites by Rebecca<br>Portfolio</h1>
+      <h1 class="page-title widest">Rebecca Hoffenberg - Portfolio</h1>
+      <h1 class="page-title medium">Rebecca Hoffenberg<br>Portfolio</h1>
       <!-- Full-stack projects -->
       <!-- Full-stack project 1 -->
       <h2 class="full col-head widest">Full-stack<br>Apps</h2>
       <h2 class="full col-head med-wide">Full stack</h2>
       <h2 class="full col-head medium">Full-stack Apps</h2>
       <div class="full-1 screenshot">
+        <img src="screenshots/screencapture-app-albumworks-co-signup-2020-08-31-13_51_39.png" alt="">
+        <span class="description">
+          I implemented the UI and billing/subscription integration for AlbumWorks during my time at Fundy Software. Try the app with a free trial <a href="https://app.albumworks.co" target="_blank">here</a>.
+        </span>
+      </div>
+      <div class="full-2 screenshot">
         <img src="screenshots/vidbits-pr.png" alt="">
         <span class="description">
           I developed this full-stack video collection app with handlebars.js, Express.js and MongoDB. During development I implemented an automated test suite using Mocha, Chai, Supertest, WebdriverIO and Phantomjs. See the app <a href="https://vidbits.herokuapp.com" target="_blank">here</a>.
@@ -66,7 +72,7 @@
       </div>
       <!-- Footer -->
       <footer>
-        <h3>Websites by Rebecca</h3>
+        <h3>Rebecca Hoffenberg</h3>
         <h4>All rights reserved</h4>
       </footer>
     </div>
